--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "lodash": "^4.17.21",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
